tests/NormalTests/paczka1/small_fuzzy/15745508.err
Error in line 1: mfq4s S907 79,6
Error in line 7: mfq4s A986 97,1
Error in line 12: WwBaybatGI8 S77 2,6
